# rpsBackend

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2022-06-10-181655_create_users/: up.sql
migrations/2022-06-10-182929_create_rooms/: up.sql
migrations/2022-06-10-183527_create_messages/: up.sql
migrations/2022-06-10-184456_user_room_junction/: down.sql  up.sql
migrations/2022-07-27-155739_hall_of_fame/: down.sql  up.sql
migrations/2022-07-28-154948_room_connections/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/actors/: ez_handler.rs  mod.rs
src/actors/chat/: mod.rs  server.rs  session.rs
src/actors/chat/models/: chat_user.rs  messages.rs  mod.rs  room.rs
src/actors/db/: manager.rs  messages.rs  mod.rs
src/actors/models/messages/: client_message.rs  connection.rs  mod.rs
src/actors/rps/: game.rs  manager.rs  models.rs
src/application/: init.rs  mod.rs
src/chat/: ez_handler.rs  mod.rs  models.rs  rps.rs  server.rs  session.rs
src/chat/models/: messages.rs  mod.rs  room.rs
src/config/: config.rs
src/crypto/: gen_key_pair.rs  mod.rs
src/middleware/: auth.rs
src/models/: authentication.rs  custom_error.rs  error.rs  hall_of_fame.rs  message.rs  mod.rs  room.rs  room_connection.rs  user.rs
src/routes/: chat.rs  hall_of_fame.rs  mod.rs  users.rs
src/routes/auth/: login.rs  register.rs
src/rps/: game.rs  manager.rs  mod.rs  models.rs
src/services/: cookie.rs  jwt.rs
src/state/: app.rs  client.rs  db_pool.rs  mod.rs
static/: index.html
