[package]
name = "rps_backend"
version = "0.1.0"
edition = "2021"

[lib]
name ="lib"
path = "src/lib.rs"

[[bin]]
name = "generate_rsa_key_pair"
path = "src/bin/generate_rsa_key_pair.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.1.0"
actix-cors = "0.6.1"
actix-session = {version ="0.6.2", features = ["cookie-session"]}
cookie = "0.16"
env_logger = "0.9.0"
chrono = "0.4.19"
futures-util = "0.3.21"
time = "0.3.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
actix-files = "0.6.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
signal-hook = "0.3.14"
bcrypt = "0.13.0"
uuid = {version = "1.1.2", features = ["v4"]}
jsonwebtoken = "8"
rsa = {version = "0.6.1", features = ["pem"]}
rand = "0.8"
pkcs8 = {version = "0.9", features = ["alloc"]}
tracing = "0.1.35"
tracing-futures = "0.2.5"
tracing-subscriber = {version = "0.3", features=["env-filter"]}
tracing-log = {version = "0.1.3", features=["env_logger"]}
config = "0.13"
colored = "2.0.0"
thiserror = "1.0.31"